# mckit

./: .clang-format  .flake8  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.rst  build.py  create_mkl_symlinks.py  justfile  noxfile.py  pyproject.toml  qodana.yaml  requirements-dev.txt  ruff.toml
.github/: constraints.txt  dependabot.yml
.github/workflows/: combine-prs.yml  labeler.yml  publish.yml  release.yml  tests.yml
.unclassified/: notes.txt
adhoc/: extract_lost_particles  extract_lost_particles.py  gen_dnfm_in_envelops.py  integrate_hfsr_antenna_flat.py  mix_steel_water.py  print_ebins.py
adhoc/cabinet/: add_sb.py  config.py
adhoc/ep11/: verify_co05_volumes.py
benchmarks/: conftest.py  mckit_utils.py  test_mcnp_reading.py
building/: extension_geometry.py
docs/: requirements.txt
notebooks/dvp/: mix-bpe5.ipynb  mix-bpe5.md  mix-bpe5.py  upp08-map-activation-to-rwcl.ipynb  upp08-map-activation-to-rwcl.md  upp08-map-activation-to-rwcl.py
profiles/: mcnp_reading.py
src/mckit/: _init_dynamic_libraries.py  body.py  fmesh.py  material.py  source.py  surface.py  transformation.py  universe.py
src/mckit/cli/: runner.py
src/mckit/cli/commands/: compose.py  decompose.py  split.py
src/mckit/parser/: cell_parser.py  mcnp_input_sly_parser.py  mcnp_section_parser.py  mctal_parser.py  meshtal_parser.py
src/mckit/parser/common/: __init__.py
src/mckit/src/: box.h  geometrymodule.c  shape.c  shape.h  surface.c  surface.h
src/mckit/utils/: __init__.py  misc.py  tolerance.py
tests/: conftest.py  test_body.py  test_fmesh.py  test_material.py  test_surface.py  test_universe.py
tests/cli/: test_check.py  test_compose.py  test_concat.py  test_decompose.py  test_runner.py  test_split.py  test_transform.py
tests/parser/: test_mcnp_section_parser.py  test_meshtal_parser.py
tests/parser/common/: test_common_lexer.py
tests/utils/: test_io.py  test_resource.py  test_utils.py
tools/: bench  clean-cr  clear-prev-dist-info.py
tutorial/: combine.i  mckit_tutorial.ipynb  mckit_tutorial.md  mckit_tutorial.py  test_cut.i  test_flattened.i
